subtitleoverlay: Fix caps memory leak when failing to get sinkpad from subtitle renderer

https://bugzilla.gnome.org/show_bug.cgi?id=775224